--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   width: 300px;
   height: 30px;
   font-size: larger;
+  margin-top: 100px;
 }
 #search-btn {
   margin-top: 30px;
@@ -29,4 +30,19 @@
 }
 #table {
   margin-top: 200px;
+}
+body {
+  background-color: lightgreen;
+}
+img {
+  width: 200px;
+  height: 200px;
+}
+tr {
+  background-color: darkgreen;
+  color: yellow;
+  text-align: center;
+}
+table {
+  border: solid 5px black;
 }
